--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "xiquzimu-extensions",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "element-plus": "^2.1.11",
-    "vue": "^3.2.25"
-  },
-  "devDependencies": {
-    "@types/node": "^17.0.31",
-    "@vitejs/plugin-vue": "^2.3.1",
-    "typescript": "^4.5.4",
-    "vite": "^2.9.7",
-    "vite-plugin-chrome-extension": "^0.0.7",
-    "vue-tsc": "^0.34.7"
-  }
+    "name": "xiquzimu-extensions",
+    "private": true,
+    "version": "0.0.0",
+    "scripts": {
+        "dev": "vite",
+        "build": "vue-tsc --noEmit && vite build",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "element-plus": "^2.1.11",
+        "vue": "^3.2.25"
+    },
+    "devDependencies": {
+        "@types/chrome": "^0.0.184",
+        "@types/node": "^17.0.31",
+        "@vitejs/plugin-vue": "^2.3.1",
+        "typescript": "^4.5.4",
+        "vite": "^2.9.7",
+        "vite-plugin-chrome-extension": "^0.0.7",
+        "vue-tsc": "^0.34.7"
+    }
 }
