--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
     "scripts": {
         "dev": "vite",
         "build": "vue-tsc --noEmit && vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "watch": "vite build --watch"
     },
     "dependencies": {
         "element-plus": "^2.1.11",
-        "vue": "^3.2.25"
+        "vue": "^3.2.25",
+        "vue3-layer": "^1.0.18"
     },
     "devDependencies": {
         "@types/chrome": "^0.0.184",
+        "@types/jquery": "^3.5.14",
         "@types/node": "^17.0.31",
         "@vitejs/plugin-vue": "^2.3.1",
         "typescript": "^4.5.4",
+        "unplugin-vue-components": "^0.19.3",
         "vite": "^2.9.7",
         "vite-plugin-chrome-extension": "^0.0.7",
         "vue-tsc": "^0.34.7"
