--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "element-plus": "^2.1.11",
         "vue": "^3.2.25",
+        "vue-clipboard3": "^2.0.0",
         "vue3-layer": "^1.0.18"
     },
     "devDependencies": {
