--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "xiquzimu-extensions",
     "private": true,
-    "version": "0.1.0",
+    "version": "0.1.1",
     "scripts": {
         "dev": "vite",
         "build": "vue-tsc --noEmit && vite build",
@@ -18,6 +18,7 @@
         "@types/chrome": "^0.0.184",
         "@types/node": "^17.0.31",
         "@vitejs/plugin-vue": "^2.3.1",
+        "eslint": "^8.33.0",
         "typescript": "^4.5.4",
         "unplugin-vue-components": "^0.19.3",
         "vite": "^2.9.7",
